# FermatPrimalityC

./: .gitignore  CMakeLists.txt  analyze_results.py  fermat_test  main.c  readme.txt
figures/: avg_time_vs_bits.csv  fp_rate_vs_bits.csv
